@@ -9,6 +9,8 @@ Version 10
 
 --Fixed bug with enemy health bars (thanks Alexey Zubkov).
 
+--Fixed nondeterminism in recorded game playback caused by syncronization with 
+  music thread for flashing path to rise marker.
 
 
 
